<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".Views.MainActivity">
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="@color/vermelho"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_imc"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/icone1"
            android:text="@string/imc"
            android:textColor="@color/preto"
            android:gravity="center"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/verde"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_vct"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/icone2"
                android:text="@string/vct"
                android:textColor="@color/preto"
                android:gravity="center"/>


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@color/azul"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_profileAnt"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/icone3"
            android:text="@string/profile"
            android:textColor="@color/preto"
            android:gravity="center"/>

    </LinearLayout>





</LinearLayout>
